Add dictionary, edit placeholder image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
                 <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
@@ -95,53 +95,10 @@
                 >
           </div>
         </div>
-        <!-- <div class="col-md-4">
+        
+        <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
-            <a href="https://prismatic-cascaron-e85dc5.netlify.app/" target="_blank">
-                <img
-                  src="/images/tejas 2.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
-                  alt="Weather project"
-                  title="Weather forecast"
-                />
-                </a>
-                <p class="mb-4 project-description">
-                  Built with HTML, CSS and Javascript - <strong><em>Desktop compatible only</em></strong>
-                </p>
-                <a href="https://prismatic-cascaron-e85dc5.netlify.app/" class="btn btn-launch-button mb-5" title="Launch weather app" target="_blank"
-                  >View project</a
-                >
-          </div>
-        </div> -->
-        <!-- <div class="col-md-4">
-          <div class="project-description">
-            <h3 class="project-title"><a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank" title="Launch Ethereum page">Gambling</a></h2>
-            <a href="https://vocal-melba-9d53a1.netlify.app/" target="_blank">
-                <img
-                  src="/images/ethereum.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
-                  alt="Gambling project"
-                  title="Crypto coin Ethereum"
-                />
-                </a>
-                <p class="mb-4 project-description">
-                HTML, CSS and Javascript
-                </p>
-                <a
-                  href="https://vocal-melba-9d53a1.netlify.app/"
-                  class="btn btn-launch-button mb-5"
-                  title="Launch Ethereum page"
-                  target="_blank"
-                  >View project</a
-                >
-          </div>
-        </div> -->
-        <div class="col-md-4">
-          <div class="project-description">
-            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h2>
+            <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
             <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
                   src="/images/world weather 3.png"
@@ -163,11 +120,11 @@
                 >
           </div>
         </div>
-      <!-- </div> -->
-      <!-- <div class="row"> -->
-        <div class="col-md-4">
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h2>
+            <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
             <a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
                   src="/images/dictionary.png"
@@ -189,11 +146,11 @@
                 >
           </div>
         </div>
-      </div>
-      <div class="row d-flex align-items-center justify-content-center">
-        <div class="col-md-4">
+      
+      <!-- <div class="d-flex align-items-center justify-content-center"> -->
+        <div class="col-md-6">
           <div class="project-description">
-            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h2>
+            <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
@@ -216,6 +173,7 @@
           </div>
         </div>
       </div>
+    </div>
 </section>
 
 <section>
