--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
-                  src="/images/coming soon.png"
+                  src="/images/coming soon 2.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Web Store project"
