Update dictionary photo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </header>
 
-<section>
+<section class="first-page">
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
@@ -127,7 +127,7 @@
             <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
             <a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
-                  src="/images/dictionary.png"
+                  src="/images/dictionary 2.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Dictionary project"
