Remove project launch buttons

--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                   title="Fidelity facts"
                 />
                 </a>
-                <p class="mb-4 project-description">
+                <p class="mb-5 project-description">
                   HTML, CSS and JavaScript
                 </p>
-                <a
+                <!-- <a
                   href="https://sage-swan-c8d97c.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch Fidelity page"
                   target="_blank"
                   >View project</a
-                >
+                > -->
           </div>
         </div>
         
@@ -108,16 +108,16 @@
                   title="Weather forecast"
                 />
                 </a>
-                <p class="mb-4 project-description">
+                <p class="mb-5 project-description">
                 HTML, CSS and JavaScript
                 </p>
-                <a
+                <!-- <a
                   href="https://sage-boba-227bc0.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch weather app"
                   target="_blank"
                   >View project</a
-                >
+                > -->
           </div>
         </div>
       </div>
@@ -134,16 +134,16 @@
                   title="Dictionary"
                 />
                 </a>
-                <p class="mb-4 project-description">
+                <p class="mb-5 project-description">
                 HTML, CSS, JavaScript and React
                 </p>
-                <a
+                <!-- <a
                   href="https://lovely-nougat-78618c.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch dictionary"
                   target="_blank"
                   >View project</a
-                >
+                > -->
           </div>
         </div>
       
@@ -160,16 +160,16 @@
                   title="E-commerce site"
                 />
                 </a>
-                <p class="mb-4 project-description">
-                HTML, CSS, React and Next.js
+                <p class="mb-5 project-description">
+                HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
-                <a
+                <!-- <a
                   href="https://clinquant-khapse-d0c0d8.netlify.app/"
                   class="btn btn-launch-button mb-5"
                   title="Launch store-front"
                   target="_blank"
                   >Coming soon</a
-                >
+                > -->
           </div>
         </div>
       </div>
