--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/portfolio-mug-4.png" class="img-fluid mug" title="MML in VR" />
+          <img src="/images/hero mug.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
@@ -76,7 +76,7 @@
             <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
                 <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
-                  src="/images/fidelity.png"
+                  src="/images/finance.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Finance project"
@@ -101,7 +101,7 @@
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
             <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/world weather 3.png"
+                  src="/images/world weather.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Weather 2 project"
@@ -127,7 +127,7 @@
             <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
             <a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
-                  src="/images/dictionary 2.png"
+                  src="/images/dictionary.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Dictionary project"
@@ -153,7 +153,7 @@
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
-                  src="/images/coming soon 2.png"
+                  src="/images/coming soon.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Web Store project"
@@ -199,7 +199,7 @@
        </div>
         <div class="col-md-6">
          <div class="center text-center">
-          <img src="/images/mug-2.png" class="img-fluid border border-5" title="MML" />
+          <img src="/images/mug.png" class="img-fluid border border-5" title="MML" />
          </div>
         </div>
        </div>
