--- a/index.html
+++ b/index.html
@@ -146,8 +146,27 @@
                 > -->
           </div>
         </div>
-      
-      <!-- <div class="d-flex align-items-center justify-content-center"> -->
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
+            <a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
+                <img
+                  src="/images/travel.png"
+                  class="img-fluid mb-4 border border-5"
+                  id="project-1"
+                  alt="Travel project"
+                  title="Travel site"
+                />
+                </a>
+                <p class="mb-5 project-description">
+                HTML and CSS
+                </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+      <div class="d-flex align-items-center justify-content-center">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
