--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS and JavaScript
+                HTML, CSS, Bootstrap and JavaScript
                 </p>
                 <!-- <a
                   href="https://sage-boba-227bc0.netlify.app/"
