Travel project description update

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML and CSS
+                HTML and CSS Flexbox
                 </p>
           </div>
         </div>
