--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     >
     </script>
     <link rel="stylesheet" href="/css/style.css" />
-  <title>Meet MML | Front-end Developer | Austin</title>
+  <title>Meet MML | Frontend Developer | Austin</title>
   </head>
   <body id="home">
 
