--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     >
     </script>
     <link rel="stylesheet" href="/css/style.css" />
-  <title>Meet MML | Frontend Developer | Austin</title>
+  <title>Meet MML | Front-End Developer | Austin</title>
   </head>
   <body id="home">
 
@@ -54,7 +54,7 @@
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">M.M. Lawry</span></h1>
-          <h2>Frontend Developer || Austin, TX</h2>
+          <h2>Front-End Developer || Austin, TX</h2>
           <div class="mt-5">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
@@ -206,7 +206,7 @@
         <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph text-start">
-            I grew up in North Texas USA. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. In the meantime, I've worked in a prison, on a cruise ship, but mostly tv stations and was once voted Production Employee of the Year. Currently, I'm a longtime Broadcast Technician transitioning into a Frontend Developer role.<br /><br />I like pretending I can sew and take photos while my machine and cameras collect dust. I relax by watching Hallmark rom-coms. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff...current obsession, personal finance tidbits to quench my minimalist thirst.
+            I grew up in North Texas USA. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. In the meantime, I've worked in a prison, on a cruise ship, but mostly tv stations and was once voted Production Employee of the Year. Currently, I'm a longtime Broadcast Technician transitioning into a Front-End Developer role.<br /><br />I like pretending I can sew and take photos while my machine and cameras collect dust. I relax by watching Hallmark rom-coms. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff...current obsession, personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
