--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS and Flexbox Layout
+                HTML, CSS and Flexbox
                 </p>
           </div>
         </div>
