--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS, Bootstrap and JavaScript
+                HTML, CSS, Bootstrap, JavaScript - <i class="fa-brands fa-react"></i>
                 </p>
                 <!-- <a
                   href="https://sage-boba-227bc0.netlify.app/"
@@ -251,23 +251,22 @@
           <h2><span class="page-name misc-header-font">Contact</span></h2>
        </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col text-center">
           <h2>Email</h2>
         </div>
       </div>
-  </div>
+  </div> -->
 </section>
 
   <footer>
-      <div class="d-flex justify-content-center">
-        <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/MMLaw95" target="_blank"><i class="fa-brands fa-github" title="View my Github profile"></i></a>
-      </div>
+    <div class="d-flex justify-content-center"><a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a></div>
+    <div class="social-links d-flex justify-content-center">
+      <a href="mailto:mlawry95@gmail.com" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://github.com/MMLaw95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/mlawry95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
   </footer>
-
 
     <script>
     window.onscroll = function() {stickHeader()};
