Rearrange footer & attach React wx app to icon

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <i class="fa-brands fa-react"></i>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react"></i></a>
                 </p>
                 <!-- <a
                   href="https://sage-boba-227bc0.netlify.app/"
@@ -260,11 +260,13 @@
 </section>
 
   <footer>
-    <div class="d-flex justify-content-center"><a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a></div>
     <div class="social-links d-flex justify-content-center">
       <a href="mailto:mlawry95@gmail.com" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/MMLaw95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.linkedin.com/in/mlawry95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
+    </div> 
+    <div class="d-flex justify-content-center">
+      <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a>
     </div>
   </footer>
 
