--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
 
   <footer>
     <div class="social-links d-flex justify-content-center">
-      <a href="mailto:mlawry95@gmail.com" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
+      <a href="mailto:mml@mml95.dev" target="_blank" title="Email me"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/MMLaw95" target="_blank" title="View my Github profile"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.linkedin.com/in/mlawry95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
     </div> 
     <div class="d-flex justify-content-center">
-      <a href="mailto:mlawry95@gmail.com" class="email-link" title="Email me">mlawry95@gmail.com</a>
+      <a href="mailto:mml@mml95.dev" class="email-link" title="Email me">mml@mml95.dev</a>
     </div>
   </footer>
 
