Update About Me header

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="container">
       <div class="row" id="about-header">
         <div class="col">
-          <h2 class="text-center"><span class="page-name about-header-font">About M.M. Lawry</span></h2>
+          <h2 class="text-center"><span class="page-name about-header-font">About Me</span></h2>
        </div>
       </div>
       <div class="row">
