Revert "Changed email back to gmail for now"
This reverts commit a2f8245321096351194e624a92ee63a1c0daffcc.

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <a href="https://www.linkedin.com/in/mml95/" target="_blank" title="View my LinkedIn page"><i class="fa-brands fa-linkedin"></i></a>
     </div> 
     <div class="d-flex justify-content-center">
-      <a href="mailto:mml@mml95.dev" class="email-link" title="Email me">mlawry95@gmail.com</a>
+      <a href="mailto:mml@mml95.dev" class="email-link" title="Email me">mml@mml95.dev</a>
     </div>
   </footer>
 
