Update fontawesome icon spin

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin"></i></a>
+                HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
                   href="https://sage-boba-227bc0.netlify.app/"
