--- a/index.html
+++ b/index.html
@@ -166,13 +166,52 @@
       </div>
 
       <div class="row">
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
+            <a href="https://gentle-sable-501fdd.netlify.app" target="_blank">
+                <img
+                  src="/images/35mm cameras.png"
+                  class="img-fluid mb-4 border border-5"
+                  id="project-1"
+                  alt="35mm camera project"
+                  title="35mm camera site"
+                />
+                </a>
+                <p class="mb-5 project-description">
+                HTML, CSS and JavaScript
+                </p>
+          </div>
+        </div>
+
+
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://world-clock-mml95.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
+            <a href="https://world-clock-mml95.netlify.app" target="_blank">
+                <img
+                  src="/images/world clock.png"
+                  class="img-fluid mb-4 border border-5"
+                  id="project-1"
+                  alt="Clock project"
+                  title="Clock site"
+                />
+                </a>
+                <p class="mb-5 project-description">
+                HTML, CSS and JavaScript
+                </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
       <div class="d-flex align-items-center justify-content-center">
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
-                  src="/images/web store.png"
+                  src="/images/coming soon.png"
                   class="img-fluid mb-4 border border-5"
                   id="project-1"
                   alt="Web Store project"
