Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS and Flexbox
+                HTML, CSS/Flexbox
                 </p>
           </div>
         </div>
@@ -179,7 +179,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS and JavaScript
+                HTML, CSS/Grid, JavaScript
                 </p>
           </div>
         </div>
