Updated project descriptions

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 />
                 </a>
                 <p class="mb-5 project-description">
-                HTML, CSS/Grid, JavaScript
+                HTML, CSS/Grid and JavaScript
                 </p>
           </div>
         </div>
