Restyle image hover, refactor code

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
-                <a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
+                <div class="project-1 border-box"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
                   src="/images/finance.png"
-                  class="img-fluid mb-4 border border-5"
+                  class="img-fluid"
                   id="project-1"
                   alt="Finance project"
                   title="Fidelity facts"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                   HTML, CSS and JavaScript
                 </p>
                 <!-- <a
@@ -99,16 +99,15 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
-            <a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
+            <div class="project-1 border-box"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
                   src="/images/world weather.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="Weather 2 project"
                   title="Weather forecast"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
@@ -125,16 +124,15 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
-            <a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
+            <div class="project-1 border-box"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
                   src="/images/dictionary.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="Dictionary project"
                   title="Dictionary"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS, JavaScript and React
                 </p>
                 <!-- <a
@@ -149,16 +147,15 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
-            <a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
+            <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
                 <img
                   src="/images/travel.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="Travel project"
                   title="Travel site"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS/Flexbox
                 </p>
           </div>
@@ -169,35 +166,32 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
-            <a href="https://gentle-sable-501fdd.netlify.app" target="_blank">
+            <div class="project-1 border-box"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank">
                 <img
                   src="/images/35mm cameras.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="35mm camera project"
                   title="35mm camera site"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS/Grid and JavaScript
                 </p>
           </div>
         </div>
 
-
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://world-clock-mml95.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
-            <a href="https://world-clock-mml95.netlify.app" target="_blank">
+            <div class="project-1 border-box"><a href="https://world-clock-mml95.netlify.app" target="_blank">
                 <img
                   src="/images/world clock.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="Clock project"
                   title="Clock site"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS and JavaScript
                 </p>
           </div>
@@ -209,16 +203,15 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
-            <a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
+            <div class="project-1 border-box"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
                   src="/images/coming soon.png"
-                  class="img-fluid mb-4 border border-5"
-                  id="project-1"
+                  class="img-fluid"
                   alt="Web Store project"
                   title="E-commerce site"
                 />
-                </a>
-                <p class="mb-5 project-description">
+                </a></div>
+                <p class="mb-5 mt-4 project-description">
                 HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
                 <!-- <a
