Update project hovering

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
-                <div class="project-1 border-box"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
+                <div class="project-1 fidelity border-box"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
                   src="/images/finance.png"
                   class="img-fluid"
