--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   title="35mm camera site"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS/Grid and JavaScript
                 </p>
           </div>
@@ -126,7 +126,7 @@
                   title="Weather forecast"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS, Bootstrap, JavaScript - <a href="https://unique-bubblegum-f21c80.netlify.app" title="React app version" target="_blank"><i class="fa-brands fa-react fa-spin" style="--fa-animation-duration: 3s"></i></a>
                 </p>
                 <!-- <a
@@ -150,7 +150,7 @@
                   title="Clock site"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS and JavaScript
                 </p>
           </div>
@@ -170,7 +170,7 @@
                   title="Dictionary"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS, JavaScript and React
                 </p>
                 <!-- <a
@@ -194,7 +194,7 @@
                   title="Travel site"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS/Flexbox
                 </p>
           </div>
@@ -214,7 +214,7 @@
                   title="E-commerce site"
                 />
                 </a></div>
-                <p class="mb-5 mt-4 project-description">
+                <p class="mt-4 project-description">
                 HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
                 <!-- <a
