Add project, update photos

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
             <div class="project-1 border-box"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/world weather.png"
+                  src="/images/weather.png"
                   class="img-fluid"
                   alt="Weather 2 project"
                   title="Weather forecast"
@@ -202,7 +202,24 @@
       </div>
 
       <div class="row">
-      <div class="d-flex align-items-center justify-content-center">
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
+            <div class="project-1 border-box"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank">
+                <img
+                  src="/images/Arizona.png"
+                  class="img-fluid"
+                  alt="Travel project"
+                  title="Travel site"
+                />
+                </a></div>
+                <p class="mt-4 bottom-row">
+                HTML, CSS/Grid
+                </p>
+          </div>
+        </div>
+
+      <!-- <div class="d-flex align-items-center justify-content-center"> -->
         <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
@@ -214,7 +231,7 @@
                   title="E-commerce site"
                 />
                 </a></div>
-                <p class="mt-4 project-description">
+                <p class="mt-4 bottom-row">
                 HTML, CSS, React and Next.js - <em><strong>Coming soon</strong></em>
                 </p>
                 <!-- <a
@@ -227,7 +244,6 @@
           </div>
         </div>
       </div>
-    </div>
 </section>
 
 <section>
