--- a/index.html
+++ b/index.html
@@ -156,9 +156,44 @@
           </div>
         </div>
       </div>
-      
-      
-    <div class="row">
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
+            <div class="project-1 border-box"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank">
+                <img
+                  src="/images/Arizona.png"
+                  class="img-fluid"
+                  alt="Travel project"
+                  title="Travel site"
+                />
+                </a></div>
+                <p class="mt-4 bottom-row">
+                HTML, CSS/Grid
+                </p>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <div class="project-description">
+            <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
+            <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
+                <img
+                  src="/images/travel.png"
+                  class="img-fluid"
+                  alt="Travel project"
+                  title="Travel site"
+                />
+                </a></div>
+                <p class="mt-4 project-description">
+                HTML, CSS/Flexbox
+                </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
       <div class="col-md-6">
           <div class="project-description">
             <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
@@ -180,42 +215,6 @@
                   target="_blank"
                   >View project</a
                 > -->
-          </div>
-        </div>
-
-        <div class="col-md-6">
-          <div class="project-description">
-            <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
-            <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
-                <img
-                  src="/images/travel.png"
-                  class="img-fluid"
-                  alt="Travel project"
-                  title="Travel site"
-                />
-                </a></div>
-                <p class="mt-4 project-description">
-                HTML, CSS/Flexbox
-                </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="project-description">
-            <h3 class="project-title"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
-            <div class="project-1 border-box"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank">
-                <img
-                  src="/images/Arizona.png"
-                  class="img-fluid"
-                  alt="Travel project"
-                  title="Travel site"
-                />
-                </a></div>
-                <p class="mt-4 bottom-row">
-                HTML, CSS/Grid
-                </p>
           </div>
         </div>
 
