--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     >
     </script>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <title>Meet MML | Front-end Developer | Austin</title>
   </head>
   <body id="home">
