--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">MMLawry</span></h1>
-          <h2>Front-end Developer || Austin, TX</h2>
+          <h2>Junior Frontend Developer || Austin, TX</h2>
           <div class="mt-5">
             <a href="#contact-header" class="btn btn-branding" title="Contact MML">Contact me</a
             >
