--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="about"><a href="#about-header" title="About me">About</a></li>
           <li class="project"><a href="#project-header" title="My projects">Portfolio</a></li>
           <li class="contact"><a href="#contact-header" title="Contact me">Contact</a></li>
-          <li class="resume d-none d-sm-inline"><a href="images/MMLResume.pdf" title="Resume">Resume</a></li>
+          <li class="resume d-none d-sm-inline"><a href="images/MMLResume.pdf" title="Resume" target="_blank">Resume</a></li>
           <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</a></li>
         </ul>
      </nav>
