--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
             <div class="project-1 border-box"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/weather.png"
+                  src="/images/orange weather.png"
                   class="img-fluid"
                   alt="Weather 2 project"
                   title="Weather forecast"
