Delete old photo rename images to src

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     >
     </script>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
   <title>Meet MML | Front-end Developer | Austin</title>
   </head>
   <body id="home">
@@ -41,7 +41,7 @@
           <li class="about"><a href="#about-header" title="About me">About</a></li>
           <li class="project"><a href="#project-header" title="My projects">Portfolio</a></li>
           <li class="contact"><a href="#contact-header" title="Contact me">Contact</a></li>
-          <li class="resume d-none d-sm-inline"><a href="images/MMLResume.pdf" title="Resume" target="_blank">Resume</a></li>
+          <li class="resume d-none d-sm-inline"><a href="src/MMLResume.pdf" title="Resume" target="_blank">Resume</a></li>
           <li class="epilogue d-none d-sm-inline"><a href="#epilogue-header" title="Special message">Epilogue</a></li>
         </ul>
      </nav>
@@ -52,7 +52,7 @@
     <div class="container below-hero">
       <div class="row">
         <div class="col-sm-6">
-          <img src="/images/hero mug.png" class="img-fluid mug" title="MML in VR" />
+          <img src="/src/hero mug.png" class="img-fluid mug" title="MML in VR" />
         </div>
         <div class="col-sm-6 hero">
           <h1 class="mb-3">Howdy, I'm <span class="name">MMLawry</span></h1>
@@ -78,7 +78,7 @@
             <h3 class="project-title"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank" title="Launch Fidelity page">Finance</a></h2>
                 <div class="project-1 fidelity border-box"><a href="https://sage-swan-c8d97c.netlify.app/" target="_blank">
                 <img
-                  src="/images/finance.png"
+                  src="/src/finance.png"
                   class="img-fluid"
                   id="project-1"
                   alt="Finance project"
@@ -103,7 +103,7 @@
             <h3 class="project-title"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank" title="Launch camera site">Photography</a></h3>
             <div class="project-1 border-box"><a href="https://gentle-sable-501fdd.netlify.app" target="_blank">
                 <img
-                  src="/images/35mm cameras.png"
+                  src="/src/35mm cameras.png"
                   class="img-fluid"
                   alt="35mm camera project"
                   title="35mm camera site"
@@ -122,7 +122,7 @@
             <h3 class="project-title"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank" title="Launch weather app">Weather</a></h3>
             <div class="project-1 border-box"><a href="https://sage-boba-227bc0.netlify.app/" target="_blank">
                 <img
-                  src="/images/orange weather.png"
+                  src="/src/orange weather.png"
                   class="img-fluid"
                   alt="Weather 2 project"
                   title="Weather forecast"
@@ -146,7 +146,7 @@
             <h3 class="project-title"><a href="https://world-clock-mml95.netlify.app" target="_blank" title="Launch world clock">World Clock</a></h3>
             <div class="project-1 border-box"><a href="https://world-clock-mml95.netlify.app" target="_blank">
                 <img
-                  src="/images/world clock.png"
+                  src="/src/world clock.png"
                   class="img-fluid"
                   alt="Clock project"
                   title="Clock site"
@@ -165,7 +165,7 @@
             <h3 class="project-title"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank" title="Launch travel website">Travel</a></h3>
             <div class="project-1 border-box"><a href="https://arizona-travel-website-mml95.netlify.app/" target="_blank">
                 <img
-                  src="/images/Arizona.png"
+                  src="/src/Arizona.png"
                   class="img-fluid"
                   alt="Travel project"
                   title="Travel site"
@@ -182,7 +182,7 @@
             <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
             <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
                 <img
-                  src="/images/travel.png"
+                  src="/src/travel.png"
                   class="img-fluid"
                   alt="Travel project"
                   title="Travel site"
@@ -201,7 +201,7 @@
             <h3 class="project-title"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank" title="Launch dictionary">Dictionary</a></h3>
             <div class="project-1 border-box"><a href="https://lovely-nougat-78618c.netlify.app/" target="_blank">
                 <img
-                  src="/images/dictionary.png"
+                  src="/src/dictionary.png"
                   class="img-fluid"
                   alt="Dictionary project"
                   title="Dictionary"
@@ -226,7 +226,7 @@
             <h3 class="project-title"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank"  title="Launch storefront">Web Store</a></h3>
             <div class="project-1 border-box"><a href="https://clinquant-khapse-d0c0d8.netlify.app/" target="_blank">
                 <img
-                  src="/images/coming soon.png"
+                  src="/src/coming soon.png"
                   class="img-fluid"
                   alt="Web Store project"
                   title="E-commerce site"
@@ -270,7 +270,7 @@
        </div>
         <div class="col-md-6">
          <div class="center text-center">
-          <img src="/images/mug.png" class="img-fluid border border-5" title="MML" />
+          <img src="/src/mug.png" class="img-fluid border border-5" title="MML" />
          </div>
         </div>
        </div>
