--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="col-md-6">
         <div class="about-section">
           <p class="about-paragraph text-start">
-            I grew up in North Texas USA. My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. In the meantime, I've worked in a prison, on a cruise ship, but mostly tv stations and was once voted Production Employee of the Year. Currently, I'm a longtime Broadcast Technician transitioning into a Front-end Developer role.<br /><br />I like pretending I can sew and take photos while my machine and cameras collect dust. I relax by watching Hallmark rom-coms. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff...current obsession, personal finance tidbits to quench my minimalist thirst.
+            My first stab at coding was on a Radio-Shack Tandy TRS-80 I got for Christmas. Eventually, I dabbled in Visual Basic and SQL while securing an Art degree alongside an Information Systems Minor. Yes, I've heard the jokes. In the meantime, I've worked in a prison, on a cruise ship, but mostly tv stations and was once voted Production Employee of the Year. Currently, I'm a longtime Broadcast Technician transitioning into a Front-end Developer role.<br /><br />I like pretending I can sew and take photos while my machine and cameras collect dust. I relax by watching Hallmark rom-coms. When I don't want to relax, I binge horror, violence, or something weird. I get a high on fixing/hacking tech gadgets, doing absolutely nothing in the company of friends, and eating meat and potato style meals away from home. I love learning new stuff...current obsession, personal finance tidbits to quench my minimalist thirst.
           </p>
           <a
             href="#project-header"
@@ -335,6 +335,28 @@
         header.classList.remove("sticky");
       }
     }
+
+
+const links = document.querySelectorAll("nav ul li a");
+
+const linkOffsets = [];
+links.forEach(link => {
+  const section = document.querySelector(link.getAttribute("href"));
+  linkOffsets.push(section.offsetTop - 200); // subtract the height of the fixed header
+});
+
+document.addEventListener("scroll", () => {
+  const scrollPosition = window.pageYOffset + 200; // add the height of the fixed header
+
+  links.forEach((link, index) => {
+    if (scrollPosition >= linkOffsets[index]) {
+      link.classList.add("active");
+    } else {
+      link.classList.remove("active");
+    }
+  });
+});
+
     </script>
   </body>
   </html>
