Project photo update

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <h3 class="project-title"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank" title="Launch travel website">Travel Deux</a></h3>
             <div class="project-1 border-box"><a href="https://rad-caramel-19f9f3.netlify.app/" target="_blank">
                 <img
-                  src="/src/travel.png"
+                  src="/src/hawaiitravel.png"
                   class="img-fluid"
                   alt="Travel project"
                   title="Travel site"
